--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@lexical/react": "^0.38.2",
     "@lexical/rich-text": "^0.38.2",
     "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.2.8",
