--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,13 @@ node_modules
 dist
 dist-ssr
 *.local
+.env
+.env.local
+.env.development
+.env.production
+.env.test
+.env.*
+!.env.example
 
 # Editor directories and files
 .vscode/*
